@@ -1,3 +1,8 @@
+2014-10-26  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (xpdf_libxpdf_a_sources): add Annot.cc.
+	(else references from Gfx.cc do not resolve when linking pdftex)
+
 2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	Import xpdf-3.04.
